fix: update header z-index

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -3,7 +3,7 @@
 header {
   position: sticky;
   top: 0;
-  z-index: 1000;
+  z-index: 1001;
   width: 100%;
   background: linear-gradient(to bottom, var(--bg), transparent);
   padding-bottom: 56px;
